# ROS-Senior-Project

./: .gitignore  README.md
Opencv/: CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  Makefile  README.md  cmake_install.cmake  videocheck  videocheck.cpp
ROS/: CMakeLists.txt  c.cpp  color_finder.cpp  serial_1.0.cpp  videocheck.cpp
ROS/ROS-20240508T204950Z-001/ROS/devel/: .catkin
ROS/ROS-20240508T204950Z-001/ROS/devel/lib/car_move/: video
ROS/ROS-20240508T204950Z-001/ROS/devel/lib/pkgconfig/: car_move.pc
ROS/ROS-20240508T204950Z-001/ROS/src/car_move/: CMakeLists.txt
ROS/ROS-20240508T205303Z-001/ROS/devel/: local_setup.sh
ROS/ROS-20240508T205303Z-001/ROS/devel/share/car_move/cmake/: car_moveConfig.cmake
ROS/ROS-20240508T205303Z-001/ROS/src/car_move/src/: video.cpp
